make collapsed at-function work, fix bug in JSBlock.flattenTokenStream that was not wrapping strings back up in their quote characters.

--- a/data/css/interactive.css
+++ b/data/css/interactive.css
@@ -9,7 +9,7 @@
 }
 
 .edcode-container {
-  border: 1px black solid;
+  border: #000000 1px solid;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
@@ -28,5 +28,50 @@
 
 .edcode-container[mode=display] > .edcode-apply,
 .edcode-container[mode=display] > .edcode-editor {
+  display: none;
+}
+
+.collapsey-container {
+  border: #4e9a06 1px solid;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background-color: #73d216;
+  display: inline-block;
+  padding: 1px;
+}
+
+.collapsey-expand-button,
+.collapsey-collapse-button {
+  display: inline-block;
+  width: 1em;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: bold;
+  margin: 2px;
+  background-color: #4e9a06;
+  color: #ffffff;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.collapsey-label {
+  display: inline-block;
+  font-family: sans-serif;
+  margin-right: 0.5em;
+}
+
+.collapsey-contents {
+  border: #4e9a06 1px solid;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  padding: 4px;
+}
+
+.collapsed-contents {
   display: none;
 }
